Optimize the project to meet all requirements for week 03 & 04
