# swagger/swagger.yaml
@@ -195,6 +195,90 @@ paths:
         '500':
           description: Server error
 
+  /users:
+    get:
+      summary: Get all users
+      responses:
+        '200':
+          description: List of all users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+
+  /users/{id}:
+    get:
+      summary: Get a user by ID
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+          description: The ID of the user to retrieve
+      responses:
+        '200':
+          description: User data retrieved successfully
+        '404':
+          description: User not found
+        '500':
+          description: Server error
+
+    put:
+      summary: Update a user by ID
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+          description: The ID of the user to update
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - email
+              properties:
+                email:
+                  type: string
+                  format: email
+                  example: updateduser@example.com
+                password:
+                  type: string
+                  example: newPassword123 (optional)
+      responses:
+        '200':
+          description: User updated successfully
+        '400':
+          description: Validation error
+        '404':
+          description: User not found or not updated
+        '500':
+          description: Server error during update
+
+    delete:
+      summary: Delete a user by ID
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+          description: The ID of the user to delete
+      responses:
+        '200':
+          description: User deleted successfully
+        '404':
+          description: User not found
+        '500':
+          description: Server error during delete
+
+
 components:
   securitySchemes:
     BearerAuth:
@@ -236,3 +320,18 @@ components:
           items:
             type: string
           example: ["wireless", "USB", "mouse"]
+
+    User:
+      type: object
+      required:
+        - email
+      properties:
+        _id:
+          type: string
+          example: 64e2dfcb59d1c128f3a908fa
+        email:
+          type: string
+          example: user@example.com
+        password:
+          type: string
+          example: hashedpassword123
